--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -13,6 +13,8 @@ jobs:
       contents: write
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Conventional Changelog Action
         uses: TriPSs/conventional-changelog-action@v3
