--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -20,3 +20,4 @@ jobs:
         uses: TriPSs/conventional-changelog-action@v3
         with:
             github-token: ${{ secrets.github_token }}
+            version-file: './version.toml'
