--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -21,3 +21,4 @@ jobs:
         with:
             github-token: ${{ secrets.github_token }}
             version-file: './version.toml'
+            version-path: "version"
